--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --ignore-path .gitignore '**/*.{js,jsx,json,md,mdx}'",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.{js,jsx,json,md,mdx}\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --check",
     "validate": "npm run check-format && npm run lint",
@@ -16,13 +16,16 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "yaml-loader": "^0.6.0"
   }
 }
