Feat: Added Yaml file for the learn section, including logos

--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -3,10 +3,10 @@
   items:
     - title: 'CryptoZombies'
       icon: '/logos/learn/cryptozombies.png'
-    - title: 'Wikipedia'
-      icon: '/logos/learn/wikipedia.png'
-    - title: 'ConsenSys'
-      icon: '/logos/learn/consensys.png'
+    - title: 'Blockchain Developer hub'
+      icon: '/logos/learn/blockchaindevhub.png'
+    - title: 'web3 University'
+      icon: '/logos/learn/web3university.png'
     - title: 'eth.build'
       icon: '/logos/learn/ethbuild.png'
     - title: 'YouTube'
@@ -24,6 +24,8 @@
 - name: '3rd Party Learning Journeys'
   id: '3rd-party-learning-journeys'
   items:
+    - title: 'Chainlink'
+      icon: '/logos/learn/chainlink.png'
     - title: 'Ethereum Foundation'
       icon: '/logos/learn/ethereumfoundation.png'
     - title: 'Solana Docs'
@@ -32,3 +34,5 @@
       icon: '/logos/learn/solidity.png'
     - title: 'OpenZeppelin'
       icon: '/logos/learn/zeppelin.png'
+    - title: 'ConsenSys'
+      icon: '/logos/learn/consensys.png'
