--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -2,37 +2,37 @@
   id: 'general-learning-resources'
   items:
     - title: 'CryptoZombies'
-      icon: '/logos/learn/cryptozombies.png'
+      logo: '/logos/learn/cryptozombies.png'
     - title: 'Blockchain Developer hub'
-      icon: '/logos/learn/blockchaindevhub.png'
+      logo: '/logos/learn/blockchaindevhub.png'
     - title: 'web3 University'
-      icon: '/logos/learn/web3university.png'
+      logo: '/logos/learn/web3university.png'
     - title: 'eth.build'
-      icon: '/logos/learn/ethbuild.png'
+      logo: '/logos/learn/ethbuild.png'
     - title: 'YouTube'
-      icon: '/logos/learn/youtube.png'
+      logo: '/logos/learn/youtube.png'
     - title: 'FreeCodeCamp'
-      icon: '/logos/learn/freecodecamp.png'
+      logo: '/logos/learn/freecodecamp.png'
     - title: 'Chainshot'
-      icon: '/logos/learn/chainshot.png'
+      logo: '/logos/learn/chainshot.png'
     - title: 'Ivan On Tech'
-      icon: '/logos/learn/ivanontech.png'
+      logo: '/logos/learn/ivanontech.png'
     - title: 'Learn X in Y Minutes'
-      icon: '/logos/learn/learnxinyminutes.png'
+      logo: '/logos/learn/learnxinyminutes.png'
 
 
 - name: '3rd Party Learning Journeys'
   id: '3rd-party-learning-journeys'
   items:
     - title: 'Chainlink'
-      icon: '/logos/learn/chainlink.png'
+      logo: '/logos/learn/chainlink.png'
     - title: 'Ethereum Foundation'
-      icon: '/logos/learn/ethereumfoundation.png'
+      logo: '/logos/learn/ethereumfoundation.png'
     - title: 'Solana Docs'
-      icon: '/logos/learn/solana.png'
+      logo: '/logos/learn/solana.png'
     - title: 'Solidity Docs'
-      icon: '/logos/learn/solidity.png'
+      logo: '/logos/learn/solidity.png'
     - title: 'OpenZeppelin'
-      icon: '/logos/learn/zeppelin.png'
+      logo: '/logos/learn/zeppelin.png'
     - title: 'ConsenSys'
-      icon: '/logos/learn/consensys.png'
+      logo: '/logos/learn/consensys.png'
