fix: scss modules for storybook

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-links": "^6.4.19",
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "babel-loader": "^8.2.4",
@@ -39,7 +40,6 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.1",
-    "storybook-addon-sass-postcss": "^0.1.0",
     "yaml-loader": "^0.6.0"
   }
 }
