--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -3,22 +3,31 @@
   items:
     - title: 'CryptoZombies'
       logo: '/logos/learn/cryptozombies.png'
+      url: 'https://cryptozombies.io/'
     - title: 'Blockchain Developer hub'
       logo: '/logos/learn/blockchaindevhub.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'web3 University'
       logo: '/logos/learn/web3university.png'
+      url: 'https://www.web3.university/'
     - title: 'eth.build'
       logo: '/logos/learn/ethbuild.png'
+      url: 'https://eth.build/'
     - title: 'YouTube'
       logo: '/logos/learn/youtube.png'
+      url: 'https://www.youtube.com/'
     - title: 'FreeCodeCamp'
       logo: '/logos/learn/freecodecamp.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Chainshot'
       logo: '/logos/learn/chainshot.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Ivan On Tech'
       logo: '/logos/learn/ivanontech.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Learn X in Y Minutes'
       logo: '/logos/learn/learnxinyminutes.png'
+      url: 'https://www.smartcontracthub.dev/'
 
 
 - name: '3rd Party Learning Journeys'
@@ -26,13 +35,19 @@
   items:
     - title: 'Chainlink'
       logo: '/logos/learn/chainlink.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Ethereum Foundation'
       logo: '/logos/learn/ethereumfoundation.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Solana Docs'
       logo: '/logos/learn/solana.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'Solidity Docs'
       logo: '/logos/learn/solidity.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'OpenZeppelin'
       logo: '/logos/learn/zeppelin.png'
+      url: 'https://www.smartcontracthub.dev/'
     - title: 'ConsenSys'
       logo: '/logos/learn/consensys.png'
+      url: 'https://www.smartcontracthub.dev/'
