--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -18,16 +18,16 @@
       url: 'https://www.youtube.com/'
     - title: 'FreeCodeCamp'
       logo: '/logos/learn/freecodecamp.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://www.freecodecamp.org/'
     - title: 'Chainshot'
       logo: '/logos/learn/chainshot.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://www.chainshot.com/'
     - title: 'Ivan On Tech'
       logo: '/logos/learn/ivanontech.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://academy.moralis.io/'
     - title: 'Learn X in Y Minutes'
       logo: '/logos/learn/learnxinyminutes.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://learnxinyminutes.com/'
 
 
 - name: '3rd Party Learning Journeys'
@@ -35,19 +35,19 @@
   items:
     - title: 'Chainlink'
       logo: '/logos/learn/chainlink.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://blog.chain.link/category/developers/'
     - title: 'Ethereum Foundation'
       logo: '/logos/learn/ethereumfoundation.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://ethereum.org/en/foundation/'
     - title: 'Solana Docs'
       logo: '/logos/learn/solana.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://docs.solana.com/'
     - title: 'Solidity Docs'
       logo: '/logos/learn/solidity.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://docs.soliditylang.org/en/v0.8.9/'
     - title: 'OpenZeppelin'
       logo: '/logos/learn/zeppelin.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://docs.openzeppelin.com/'
     - title: 'ConsenSys'
       logo: '/logos/learn/consensys.png'
-      url: 'https://www.smartcontracthub.dev/'
+      url: 'https://consensys.net/'
