--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -7,10 +7,10 @@
     - title: 'Blockchain Developer hub'
       logo: '/logos/learn/blockchaindevhub.png'
       url: 'https://www.smartcontracthub.dev/'
-    - title: 'web3 University'
+    - title: 'Web3 University'
       logo: '/logos/learn/web3university.png'
       url: 'https://www.web3.university/'
-    - title: 'eth.build'
+    - title: 'Eth.Build'
       logo: '/logos/learn/ethbuild.png'
       url: 'https://eth.build/'
     - title: 'YouTube'
