--- a/data/fund.yaml
+++ b/data/fund.yaml
@@ -41,6 +41,7 @@
 
 - name: 'Faucets'
   id: 'faucets'
+  items:
     - title: 'EVM Faucets'
       logo: '/logos/faucets.png'
       url: 'https://faucets.chain.link/'
