Feat: Nav Item in progress

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "@/data/*": ["data/*"],
       "@/pages/*": ["src/pages/*"],
       "@/helpers/*": ["src/helpers/*"],
-      "@/styles/*": ["src/styles/*"]
+      "@/styles/*": ["src/styles/*"],
+      "@/icons/*": ["src/icons/*"]
     }
   }
 }
