--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
