--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
-    "import/no-anonymous-default-export": "off"
-    // "@next/next/no-img-element": "off"
+    "import/no-anonymous-default-export": "off",
+    "@next/next/no-img-element": "off"
   }
 }
