Doc: manage yaml file updates

--- a/data/manage.yaml
+++ b/data/manage.yaml
@@ -1,7 +1,7 @@
 - name: 'Smart Contract Management Tools'
   id: 'smart-contract-management-tools'
   items: 
-    - title: 'OpenZeppelin'
+    - title: 'OpenZeppelin Contracts'
       logo: '/logos/zeppelin.png'
       url: 'https://docs.openzeppelin.com/'
     - title: 'Kaleido'
