--- a/data/monitor.yaml
+++ b/data/monitor.yaml
@@ -4,61 +4,61 @@
     - title: 'OpenZeppelin Sentinel'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Tenderly'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Scout'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Ethernal'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Blockscout'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Dune'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Corda'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Fantom'
       logo: ''
       url: ''
 
 - name: 'Explorers'
   id: 'explorers'
   items: 
-    - title: ''
+    - title: 'TheGraph'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Etherscan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Solscan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'BscScan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'PolygonScan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Avalanche Explorer'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'FTMScan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'HecoInfo'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'xDai Explorer'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Arbiscan'
       logo: ''
       url: ''
-    - title: ''
+    - title: 'Optimistic Ethereum'
       logo: ''
       url: ''
