Doc: yaml completed

--- a/data/monitor.yaml
+++ b/data/monitor.yaml
@@ -2,63 +2,63 @@
   id: 'monitoring-tools'
   items: 
     - title: 'OpenZeppelin Sentinel'
-      logo: '/logos/'
-      url: ''
+      logo: '/logos/zeppelin.png'
+      url: 'https://docs.openzeppelin.com/defender/sentinel'
     - title: 'Tenderly'
-      logo: ''
-      url: ''
+      logo: '/logos/tenderly.png'
+      url: 'https://tenderly.co/monitoring/'
     - title: 'Scout'
-      logo: ''
-      url: ''
+      logo: '/logos/scout.png'
+      url: 'https://scout.cool/'
     - title: 'Ethernal'
-      logo: ''
-      url: ''
+      logo: '/logos/ethernal.png'
+      url: 'https://github.com/tryethernal'
     - title: 'Blockscout'
-      logo: ''
-      url: ''
+      logo: '/logos/blockscout.png'
+      url: 'https://blockscout.com/xdai/mainnet/'
     - title: 'Dune'
-      logo: ''
-      url: ''
+      logo: '/logos/dune.png'
+      url: 'https://dune.network/'
     - title: 'Corda'
-      logo: ''
-      url: ''
+      logo: '/logos/corda.png'
+      url: 'https://github.com/corda'
     - title: 'Fantom'
-      logo: ''
-      url: ''
+      logo: '/logos/fantom.png'
+      url: 'https://github.com/Fantom-Foundation'
 
 - name: 'Explorers'
   id: 'explorers'
   items: 
     - title: 'TheGraph'
-      logo: ''
-      url: ''
+      logo: '/logos/thegraph.png'
+      url: 'https://thegraph.com/en/'
     - title: 'Etherscan'
-      logo: ''
-      url: ''
+      logo: '/logos/etherscan.png'
+      url: 'https://etherscan.io/'
     - title: 'Solscan'
-      logo: ''
-      url: ''
+      logo: '/logos/solscan.png'
+      url: 'https://solscan.io/'
     - title: 'BscScan'
-      logo: ''
-      url: ''
+      logo: '/logos/bscscan.png'
+      url: 'https://bscscan.com/'
     - title: 'PolygonScan'
-      logo: ''
-      url: ''
+      logo: '/logos/polygonscan.png'
+      url: 'https://polygonscan.com/'
     - title: 'Avalanche Explorer'
-      logo: ''
-      url: ''
+      logo: '/logos/avalancheexplorer.png'
+      url: 'https://explorer.avax.network/'
     - title: 'FTMScan'
-      logo: ''
-      url: ''
+      logo: '/logos/ftmscan.png'
+      url: 'https://ftmscan.com/'
     - title: 'HecoInfo'
-      logo: ''
-      url: ''
+      logo: '/logos/hecoinfo.png'
+      url: 'https://hecoinfo.com/'
     - title: 'xDai Explorer'
-      logo: ''
-      url: ''
+      logo: '/logos/xdaiexplorer.png'
+      url: 'https://blockscout.com/xdai/mainnet/'
     - title: 'Arbiscan'
-      logo: ''
-      url: ''
+      logo: '/logos/arbiscan.png'
+      url: 'https://arbiscan.io/'
     - title: 'Optimistic Ethereum'
-      logo: ''
-      url: ''
+      logo: '/logos/optimisticethereum.png'
+      url: 'https://optimistic.etherscan.io/'
