feat: deploy tools

--- a/data/deploy.yaml
+++ b/data/deploy.yaml
@@ -20,3 +20,15 @@
 - name: 'Deployment Tools'
   id: 'deployment-tools'
   items:
+  - title: 'Truffle'
+    logo: '/logos/truffle.png'
+    url: 'https://trufflesuite.com/'
+  - title: 'HardHat'
+    logo: '/logos/hardhat.png'
+    url: 'https://hardhat.org/'
+  - title: 'Brownie'
+    logo: '/logos/brownie.png'
+    url: 'https://github.com/eth-brownie/brownie'
+  - title: 'Dapp Tools'
+    logo: '/logos/dappstools.png'
+    url: 'https://dapp.tools/'
