--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "sass": "^1.49.9"
   },
   "devDependencies": {
