--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "next-seo": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.9"
