--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-seo": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "sass": "^1.49.9"
   },
   "devDependencies": {
