--- a/data/deploy.yaml
+++ b/data/deploy.yaml
@@ -30,5 +30,5 @@
     logo: '/logos/brownie.png'
     url: 'https://github.com/eth-brownie/brownie'
   - title: 'Dapp Tools'
-    logo: '/logos/dappstools.png'
+    logo: '/logos/dapptools.png'
     url: 'https://dapp.tools/'
