fix: blockchain links

--- a/data/blockchains.yaml
+++ b/data/blockchains.yaml
@@ -1,39 +1,39 @@
 - name: 'BSC'
   id: 'Bsc'
   logo: '/logos/bsc.png'
-  url: '#'
+  url: 'https://www.bnbchain.world/en/smartChain'
 
 - name: 'Polygon'
   id: 'polygon'
   logo: '/logos/polygonscan.png'
-  url: '#'
+  url: 'https://polygon.technology/'
 
 - name: 'Avalanche'
   id: 'avalanche'
   logo: '/logos/avalanche.png'
-  url: '#'
+  url: 'https://www.avax.network/'
 
 - name: 'FantomBSC'
   id: 'fantomBSC'
   logo: '/logos/fantombsc.png'
-  url: '#'
+  url: 'https://fantom.foundation/'
 
 - name: 'HECO'
   id: 'heco'
   logo: '/logos/hecoInfo.png'
-  url: '#'
+  url: 'https://www.hecochain.com/en-us/'
 
 - name: 'xDai'
   id: 'xDai'
   logo: '/logos/xdai.png'
-  url: '#'
+  url: 'https://www.xdaichain.com/'
 
 - name: 'Arbitrum'
   id: 'arbitrum'
   logo: '/logos/arbiscan.png'
-  url: '#'
+  url: 'https://offchainlabs.com/'
 
 - name: 'Optimism'
   id: 'optimism'
   logo: '/logos/optimisticethereum.png'
-  url: '#'
+  url: 'https://www.optimism.io/'
