Pr 65/currently expanded (#83)
* Fix: url with active accordion

* Fix: url with active accordion

* fix: click to scroll, header and open accordion on the url

* Fix: scroll

* Fix: remove scroll condition

* reverted to button for the accordion

* fix: making fixes

* Fix: removed unused effect dependencies

* Fix: added the hash.

* Fix: added the hash., little clean-ups

* Fix: clean up

* Fix: used hash with accordion id, removed activeLink props

--- a/data/monitor.yaml
+++ b/data/monitor.yaml
@@ -51,7 +51,7 @@
       logo: '/logos/ftmscan.png'
       url: 'https://ftmscan.com/'
     - title: 'HecoInfo'
-      logo: '/logos/hecoinfo.png'
+      logo: '/logos/hecoInfo.png'
       url: 'https://hecoinfo.com/'
     - title: 'Arbiscan'
       logo: '/logos/arbiscan.png'
