--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "@/pages/*": ["src/pages/*"],
       "@/helpers/*": ["src/helpers/*"],
       "@/styles/*": ["src/styles/*"],
-      "@/icons/*": ["src/icons/*"]
+      "@/icons/*": ["src/icons/*"],
+      "@/context/*": ["src/context/*"]
     }
   }
 }
