--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "intro.js": "^5.1.0",
+    "intro.js-react": "^0.6.0",
     "next": "12.1.0",
     "next-seo": "^5.4.0",
     "react": "17.0.2",
