--- a/data/blockchains.yaml
+++ b/data/blockchains.yaml
@@ -2,48 +2,58 @@
   id: 'Bsc'
   logo: '/logos/bsc.png'
   url: 'https://www.bnbchain.world/en/smartChain'
+  description: 'this is my description'
 
 - name: 'Polygon'
   id: 'polygon'
   logo: '/logos/polygonscan.png'
   url: 'https://polygon.technology/'
+  description: 'this is my description'
 
 - name: 'Avalanche'
   id: 'avalanche'
   logo: '/logos/avalanche.png'
   url: 'https://www.avax.network/'
+  description: 'this is my description'
 
 - name: 'FantomBSC'
   id: 'fantomBSC'
   logo: '/logos/fantombsc.png'
   url: 'https://fantom.foundation/'
+  description: 'this is my description'
 
 - name: 'HECO'
   id: 'heco'
   logo: '/logos/hecoInfo.png'
   url: 'https://www.hecochain.com/en-us/'
+  description: 'this is my description'
 
 - name: 'xDai'
   id: 'xDai'
   logo: '/logos/xdai.png'
   url: 'https://www.xdaichain.com/'
+  description: 'this is my description'
 
 - name: 'Arbitrum'
   id: 'arbitrum'
   logo: '/logos/arbiscan.png'
   url: 'https://offchainlabs.com/'
+  description: 'this is my description'
 
 - name: 'Optimism'
   id: 'optimism'
   logo: '/logos/optimisticethereum.png'
   url: 'https://www.optimism.io/'
+  description: 'this is my description'
 
 - name: 'Terra'
   id: 'terra'
   logo: '/logos/terra.png'
   url: 'https://www.terra.money/'
+  description: 'this is my description'
 
 - name: 'Solana'
   id: 'solana'
   logo: '/logos/solana.png'
   url: 'https://solana.com/'
+  description: 'this is my description'
