--- a/data/community.yaml
+++ b/data/community.yaml
@@ -4,6 +4,7 @@
     - title: 'Rekt News'
       logo: '/logos/rekt.png'
       url: 'https://rekt.news/'
+      description: 'this is my description'
 
 - name: 'For Enterprise'
   id: 'for-enterprise'
@@ -11,6 +12,7 @@
     - title: 'DoraHacks'
       logo: '/logos/dorahacks.png'
       url: 'https://dorahacks.io/'
+      description: 'this is my description'
 
 - name: 'For Developers'
   id: 'for-developers'
@@ -18,21 +20,28 @@
     - title: 'DoraHacks'
       logo: '/logos/dorahacks.png'
       url: 'https://dorahacks.io/'
+      description: 'this is my description'
     - title: 'Reddit'
       logo: '/logos/reddit.png'
       url: 'https://www.reddit.com/r/smartcontracts/'
+      description: 'this is my description'
     - title: 'OpenZeppelin Forum'
       logo: '/logos/openzeppelin.png'
       url: 'https://forum.openzeppelin.com/c/smart-contracts/39'
+      description: 'this is my description'
     - title: 'EatTheBlocks Forum'
       logo: '/logos/eattheblocks.png'
       url: 'https://forum.eattheblocks.com/c/dapp-smart-contract-development'
+      description: 'this is my description'
     - title: 'Cardano Forum'
       logo: '/logos/cardano.png'
       url: 'https://forum.cardano.org/c/developers/29'
+      description: 'this is my description'
     - title: 'Solidity Forum'
       logo: '/logos/solidity-forum.png'
       url: 'https://forum.soliditylang.org/'
+      description: 'this is my description'
     - title: 'Chainlink Discord'
       logo: '/logos/chainlink.png'
       url: 'https://discord.com/channels/592041321326182401/592044132222894090'
+      description: 'this is my description'
