--- a/data/deploy.yaml
+++ b/data/deploy.yaml
@@ -4,18 +4,23 @@
     - title: 'Etherscan'
       logo: '/logos/etherscan.png'
       url: 'https://etherscan.io/'
+      description: 'this is my description'
     - title: 'OpenSea'
       logo: '/logos/opensea.png'
       url: 'https://opensea.io/'
+      description: 'this is my description'
     - title: 'Infura'
       logo: '/logos/infura.png'
       url: 'https://infura.io/'
+      description: 'this is my description'
     - title: 'Chainlinkstack'
       logo: '/logos/chainlinkstack.png'
       url: 'https://chainstack.com/'
+      description: 'this is my description'
     - title: 'Quicknode'
       logo: '/logos/quicknode.png'
       url: 'https://www.quicknode.com/'
+      description: 'this is my description'
 
 - name: 'Deployment Tools'
   id: 'deployment-tools'
@@ -23,12 +28,16 @@
   - title: 'Truffle'
     logo: '/logos/truffle.png'
     url: 'https://trufflesuite.com/'
+    description: 'this is my description'
   - title: 'HardHat'
     logo: '/logos/hardhat.png'
     url: 'https://hardhat.org/'
+    description: 'this is my description'
   - title: 'Brownie'
     logo: '/logos/brownie.png'
     url: 'https://github.com/eth-brownie/brownie'
+    description: 'this is my description'
   - title: 'Dapp Tools'
     logo: '/logos/dapptools.png'
     url: 'https://dapp.tools/'
+    description: 'this is my description'
