--- a/data/fund.yaml
+++ b/data/fund.yaml
@@ -4,27 +4,35 @@
     - title: 'Coinbase'
       logo: '/logos/coinbase.png'
       url: 'https://www.coinbase.com/'
+      description: 'Coinbase is a secure platform that makes it easy to buy, sell, and store cryptocurrency like Bitcoin, Ethereum, and more. Based in the USA, Coinbase is available in over 30 countries worldwide.'
     - title: 'Crypto.com'
       logo: '/logos/crypto.com.png'
       url: 'https://crypto.com/'
+      description: 'Crypto.com is on a mission to accelerate the world’s transition to cryptocurrency. Through the Crypto.com Mobile App and Exchange, you can buy 150+ cryptocurrencies and stablecoins, such as Bitcoin (BTC), Ethereum (ETH), Cardano (ADA), Solana (SOL) and etc. Purchase with a credit card, debit card, crypto, or fiat bank transfer. Our ecosystem consists of financial services, payment solutions, a world-class trading platform, and decentralised finance offerings.'
     - title: 'Robinhood'
       logo: '/logos/robinhood.png'
       url: 'https://robinhood.com/'
+      description: 'Robinhood has commission-free investing, and tools to help shape your financial future. Sign up and get your first stock free. Limitations and fees may apply.'
     - title: 'PayPal'
       logo: '/logos/paypal.png'
       url: 'https://www.paypal.com/'
+      description: 'PayPal is the faster, safer way to send money and make an online payment or set up a merchant account.'
     - title: 'Binance'
       logo: '/logos/binance.png'
       url: 'https://www.binance.com/'
+      description: 'Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume'
     - title: 'eToro'
       logo: '/logos/etoro.png'
       url: 'https://etoro.com/'
+      description: 'Trade and invest in a diversified portfolio, starting at $10, or practise risk-free with a virtual portfolio. Join eToro’s 25M user community.'
     - title: 'SoFi'
       logo: '/logos/sofi.png'
       url: 'https://www.sofi.com/'
+      description: 'Want an easier way to take control of your finances? From getting debt free to growing your investments, we are here to help you get your money right.'
     - title: 'Kraken'
       logo: '/logos/kraken.png'
       url: 'https://kraken.com/'
+      description: 'Kraken is more than just a Bitcoin trading platform. Come see why our cryptocurrency exchange is the best place to buy, sell, trade and learn about crypto.'
 
 - name: 'Other Protocols'
   id: 'other-protocols'
@@ -32,12 +40,15 @@
     - title: 'deBridge'
       logo: '/logos/deBridge.png'
       url: 'https://debridge.finance/'
+      description: 'deBridge is a cross-chain interoperability and liquidity transfer protocol that allows decentralized transfer of data and assets between various blockchains.'
     - title: 'Tornado Cash'
       logo: '/logos/tornado-cash.png'
       url: 'https://tornado.cash/'
+      description: 'Non-custodial Ethereum Privacy solution.'
     - title: 'Substrate'
       logo: '/logos/substrate.png'
       url: 'https://substrate.io/'
+      description: 'Substrate enables developers to quickly and easily build future-proof blockchains optimized for any use case.'
 
 - name: 'Faucets'
   id: 'faucets'
@@ -45,9 +56,12 @@
     - title: 'EVM Faucets'
       logo: '/logos/faucets.png'
       url: 'https://faucets.chain.link/'
+      description: 'Get testnet LINK for an account on one of the supported blockchain testnets so you can create and test your own oracle and Chainlinked smart contract.'
     - title: 'Sol Faucet'
       logo: '/logos/sol-faucet.png'
       url: 'https://solfaucet.com/'
+      description: ''
     - title: 'Terra Faucet'
       logo: '/logos/terra-faucet.png'
       url: 'https://faucet.terra.money/'
+      description: 'Terra Faucet'
