--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -4,30 +4,39 @@
     - title: 'CryptoZombies'
       logo: '/logos/learn/cryptozombies.png'
       url: 'https://cryptozombies.io/'
+      description: 'CryptoZombies is The Most Popular, Interactive Solidity Tutorial That Will Help You Learn Blockchain Programming on Ethereum by Building Your Own Fun Game with Zombies — Master Blockchain Development with Web3, Infura, Metamask & Ethereum Smart Contractsand Become a Blockchain Developer in Record Time!.'
     - title: 'Blockchain Developer hub'
       logo: '/logos/learn/blockchaindevhub.png'
       url: 'https://www.smartcontracthub.dev/'
+      description: 'Dive into blockchain and smart contract development.'
     - title: 'Web3 University'
       logo: '/logos/learn/web3university.png'
       url: 'https://www.web3.university/'
+      description: 'The comprehensive educational resource on blockchain development with the most useful tutorials across the web3 ecosystem. Partnering with a16z, Alchemy, Polygon, Pantera, Chainshot, Offchain Labs, and many more.'
     - title: 'Eth.Build'
       logo: '/logos/learn/ethbuild.png'
       url: 'https://eth.build/'
+      description: 'Educational sandbox for prototyping Web3. Learn Ethereum visually with drag-and-drop programming.'
     - title: 'YouTube'
       logo: '/logos/learn/youtube.png'
       url: 'https://www.youtube.com/'
+      description: 'Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube.'
     - title: 'FreeCodeCamp'
       logo: '/logos/learn/freecodecamp.png'
       url: 'https://www.freecodecamp.org/'
+      description: 'Learn to Code — For Free'
     - title: 'Chainshot'
       logo: '/logos/learn/chainshot.png'
       url: 'https://www.chainshot.com/'
+      description: 'Fast-track your Ethereum Developer career in an instructor-led and challenging bootcamp focused on discussion and application!'
     - title: 'Ivan On Tech'
       logo: '/logos/learn/ivanontech.png'
       url: 'https://academy.moralis.io/'
+      description: 'Become a blockchain expert and get certified now with Moralis Academy. We teach developers and beginners how to become Web3 professionals.'
     - title: 'Learn X in Y Minutes'
       logo: '/logos/learn/learnxinyminutes.png'
       url: 'https://learnxinyminutes.com/'
+      description: ''
 
 
 - name: '3rd Party Learning Journeys'
@@ -36,18 +45,24 @@
     - title: 'Chainlink'
       logo: '/logos/learn/chainlink.png'
       url: 'https://blog.chain.link/category/developers/'
+      description: 'Check out the latest developer content, tutorials, and workshops around Chainlink and other leading blockchain ecosystem projects.'
     - title: 'Ethereum Foundation'
       logo: '/logos/learn/ethereumfoundation.png'
       url: 'https://ethereum.org/en/foundation/'
+      description: 'Learn about the Ethereum Foundation (EF), a non-profit organization dedicated to supporting Ethereum and related technologies.'
     - title: 'Solana Docs'
       logo: '/logos/learn/solana.png'
       url: 'https://docs.solana.com/'
+      description: 'Solana Documentation'
     - title: 'Solidity Docs'
       logo: '/logos/learn/solidity.png'
       url: 'https://docs.soliditylang.org/en/v0.8.9/'
+      description: ''
     - title: 'OpenZeppelin'
       logo: '/logos/learn/zeppelin.png'
       url: 'https://docs.openzeppelin.com/'
+      description: ''
     - title: 'ConsenSys'
       logo: '/logos/learn/consensys.png'
       url: 'https://consensys.net/'
+      description: 'Build next-generation apps, launch blockchain-based financial infrastructure, and access the decentralized web with ConsenSys&#039; Ethereum product suite.'
