--- a/data/monitor.yaml
+++ b/data/monitor.yaml
@@ -4,27 +4,35 @@
     - title: 'OpenZeppelin Sentinel'
       logo: '/logos/zeppelin.png'
       url: 'https://docs.openzeppelin.com/defender/sentinel'
+      description: 'this is my description'
     - title: 'Tenderly'
       logo: '/logos/tenderly.png'
       url: 'https://tenderly.co/monitoring/'
+      description: 'this is my description'
     - title: 'Scout'
       logo: '/logos/scout.png'
       url: 'https://scout.cool/'
+      description: 'this is my description'
     - title: 'Ethernal'
       logo: '/logos/ethernal.png'
       url: 'https://github.com/tryethernal'
+      description: 'this is my description'
     - title: 'Blockscout'
       logo: '/logos/blockscout.png'
       url: 'https://blockscout.com/xdai/mainnet/'
+      description: 'this is my description'
     - title: 'Dune'
       logo: '/logos/dune.png'
       url: 'https://dune.network/'
+      description: 'this is my description'
     - title: 'Corda'
       logo: '/logos/corda.png'
       url: 'https://github.com/corda'
+      description: 'this is my description'
     - title: 'Fantom'
       logo: '/logos/fantom.png'
       url: 'https://github.com/Fantom-Foundation'
+      description: 'this is my description'
 
 - name: 'Explorers'
   id: 'explorers'
@@ -32,30 +40,40 @@
     - title: 'TheGraph'
       logo: '/logos/thegraph.png'
       url: 'https://thegraph.com/en/'
+      description: 'this is my description'
     - title: 'Etherscan'
       logo: '/logos/etherscan.png'
       url: 'https://etherscan.io/'
+      description: 'this is my description'
     - title: 'Solscan'
       logo: '/logos/solscan.png'
       url: 'https://solscan.io/'
+      description: 'this is my description'
     - title: 'BscScan'
       logo: '/logos/bscscan.png'
       url: 'https://bscscan.com/'
+      description: 'this is my description'
     - title: 'PolygonScan'
       logo: '/logos/polygonscan.png'
       url: 'https://polygonscan.com/'
+      description: 'this is my description'
     - title: 'Avalanche Explorer'
       logo: '/logos/avalancheexplorer.png'
       url: 'https://explorer.avax.network/'
+      description: 'this is my description'
     - title: 'FTMScan'
       logo: '/logos/ftmscan.png'
       url: 'https://ftmscan.com/'
+      description: 'this is my description'
     - title: 'HecoInfo'
       logo: '/logos/hecoInfo.png'
       url: 'https://hecoinfo.com/'
+      description: 'this is my description'
     - title: 'Arbiscan'
       logo: '/logos/arbiscan.png'
       url: 'https://arbiscan.io/'
+      description: 'this is my description'
     - title: 'Optimistic Ethereum'
       logo: '/logos/optimisticethereum.png'
       url: 'https://optimistic.etherscan.io/'
+      description: 'this is my description'
