--- a/data/market.yaml
+++ b/data/market.yaml
@@ -4,36 +4,47 @@
     - title: 'Startup with Chainlink'
       logo: '/logos/chainlink-startup.png'
       url: 'https://chainlinklabs.com/startup'
+      description: 'this is my description'
     - title: 'Rhapsody Ventures'
       logo: '/logos/rhapsody-ventures.png'
       url: 'https://rhapsodyvp.com/'
+      description: 'this is my description'
     - title: 'Binance Labs'
       logo: '/logos/binance-labs.png'
       url: 'https://labs.binance.com/'
+      description: 'this is my description'
     - title: 'Coinbase Ventures'
       logo: '/logos/coinbase.png'
       url: 'https://www.coinbase.com/ventures'
+      description: 'this is my description'
     - title: "Blockchain Centre's Blockchain Engine"
       logo: '/logos/blockchain-centre.png'
       url: 'https://blockchaincentre.io/'
+      description: 'this is my description'
     - title: 'CV Labs Incubator'
       logo: '/logos/cv-labs.png'
       url: 'https://cvlabs.com/incubation'
+      description: 'this is my description'
     - title: 'Huobi Labs Incubator Program'
       logo: '/logos/huobi-labs.png'
       url: 'https://www.huobidefilabs.io/'
+      description: 'this is my description'
     - title: 'CATENA'
       logo: '/logos/catena.png'
       url: 'https://www.catena-capital.com/' 
+      description: 'this is my description'
     - title: 'Y Combinator'
       logo: '/logos/y-combinator.png'
       url: 'https://www.ycombinator.com/'
+      description: 'this is my description'
     - title: 'R3 Venture Program'
       logo: '/logos/r3.png'
       url: 'https://www.r3.com/venture-development/'
+      description: 'this is my description'
     - title: 'dlab'
       logo: '/logos/dlab.png'
       url: 'https://dlab.vc/'
+      description: 'this is my description'
 
 - name: 'Grant Programs'
   id: 'grant-programs'
@@ -41,33 +52,43 @@
     - title: 'Web3 Foundation'
       logo: '/logos/web3-foundation.png'
       url: 'https://web3.foundation/grants/'
+      description: 'this is my description'
     - title: 'Chainlink'
       logo: '/logos/chainlink.png'
       url: 'https://chain.link/'
+      description: 'this is my description'
     - title: 'Darwinia'
       logo: '/logos/darwinia.png'
       url: 'https://github.com/darwinia-network/collaboration/blob/master/grant/README.md'
+      description: 'this is my description'
     - title: 'Moonbeam'
       logo: '/logos/moonbeam.png'
       url: 'https://moonbeam.foundation/grants/'
+      description: 'this is my description'
     - title: 'HydraDX'
       logo: '/logos/hydradx.png'
       url: 'https://docs.hydradx.io/new_deal/'
+      description: 'this is my description'
     - title: 'Solana'
       logo: '/logos/solana.png'
       url: 'https://solana.foundation/grants'
+      description: 'this is my description'
     - title: 'Polkadot'
       logo: '/logos/polkadot.png'
       url: 'https://docs.google.com/document/d/1IZykdp2cyQavcRyZd_dgNj5DcgxgZR6kAqGdcNARu1w/edit'
+      description: 'this is my description'
     - title: 'Edgeware Builders Guild'
       logo: '/logos/edgeware-builders.png'
       url: 'https://github.com/edgeware-builders/construction-projects'
+      description: 'this is my description'
     - title: 'Crust Network'
       logo: '/logos/crust.png'
       url: 'https://github.com/crustio/Crust-Grants-Program'
+      description: 'this is my description'
     - title: 'Astar'
       logo: '/logos/astar.png'
       url: 'https://github.com/AstarNetwork/builders-program'
+      description: 'this is my description'
 
 - name: 'Venture Capital Funds'
   id: 'venture-capital-funds'
@@ -75,33 +96,44 @@
     - title: 'Digital Currency Group'
       logo: '/logos/dcg.png'
       url: 'https://dcg.co/'
+      description: 'this is my description'
     - title: 'NGC Ventures'
       logo: '/logos/ngc.png'
       url: 'https://ngc.fund/'
+      description: 'this is my description'
     - title: 'Coinbase Ventures'
       logo: '/logos/coinbase.png'
       url: 'https://www.coinbase.com/ventures'
+      description: 'this is my description'
     - title: 'Pantera Capital'
       logo: '/logos/pantera.png'
       url: 'https://panteracapital.com/'
+      description: 'this is my description'
     - title: 'Paradigm'
       logo: '/logos/paradigm.png'
       url: 'https://www.paradigm.xyz/'
+      description: 'this is my description'
     - title: 'Plug and Play Tech Center'
       logo: '/logos/plug-and-play.png'
       url: 'https://www.plugandplaytechcenter.com/'
+      description: 'this is my description'
     - title: 'Fenbushi Capital'
       logo: '/logos/fenbushi-capital.png'
       url: 'https://www.fenbushicapital.vc/index_en.html'
+      description: 'this is my description'
     - title: 'Blockchain Capital'
       logo: '/logos/blockchain-capital.png'
       url: 'https://blockchain.capital/'
+      description: 'this is my description'
     - title: 'Andreessen Horowitz'
       logo: '/logos/andreessen-horowitz.png'
       url: 'https://a16z.com/'
+      description: 'this is my description'
     - title: 'Lightseed Venture Partners'
       logo: '/logos/lightseed.png'
       url: 'https://lsvp.com/'
+      description: 'this is my description'
     - title: 'GV'
       logo: '/logos/gv.png'
       url: 'https://www.gv.com/'
+      description: 'this is my description'
