--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "intro.js-react": "^0.6.0",
     "next": "12.1.0",
     "next-seo": "^5.4.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
